Fixing overflow on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@
 html{
     scroll-padding-top: 16px;
     scroll-behavior: smooth;
+    // overflow-x: hidden;
 }
 
 
@@ -30,7 +31,7 @@ body{
     height: 100vh;
     background-color: $white-normal;
     position: relative;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 body::-webkit-scrollbar{ 
     width: 12px;
